--- a/sokoban/Cargo.toml
+++ b/sokoban/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "sokoban"
+name = "推箱子"
 version = "0.1.0"
 edition = "2021"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -10,3 +9,6 @@ ggez = "0.7"
 specs = { version = "0.17.0", features = ["specs-derive"] }
 glam = { version = "0.20.0", features = ["mint"] }
 itertools = "0.10.3"
+[build-dependencies]
+zip = "0.6.2"
+zip-extensions = "0.6"
