--- a/my-redis/Cargo.toml
+++ b/my-redis/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 mini-redis = "0.4"
+bytes = "1"
+
+[[example]]
+name = "hello-redis"
+path = "examples/hello-redis.rs"
